--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -3,10 +3,11 @@
     text-shadow: 1px 1px 2px #f1fec6;
 }
 
+/* Product images */
 .card-img-top {
     width: 100%;
     height: 15vw;
-    object-fit: cover;
+    object-fit: scale-down;
 }
 
 .jumbotron {
@@ -24,4 +25,37 @@
     margin: 20px auto;
     padding: 20px 0px; 
     color: #29339b;
+}
+
+/********** Medium devices only **********/
+@media (min-width: 992px) and (max-width: 1199px) {
+    /* Product images */
+    .card-img-top {
+        width: 100%;
+        height: 30vw;
+        object-fit: scale-down;
+    }
+}
+
+/********** Small devices only **********/
+
+@media (min-width: 768px) and (max-width: 991px) {
+
+    /* Product images */
+    .card-img-top {
+        width: 100%;
+        height: 30vw;
+        object-fit: scale-down;
+    }
+  }
+  
+ /********** Extra small devices only **********/
+@media (max-width: 767px) {
+
+    /* Product images */
+    .card-img-top {
+        width: 100%;
+        height: 50vw;
+        object-fit: scale-down;
+    }  
 }
