--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -27,6 +27,10 @@
     color: #00203FFF;
 }
 
+.page-link {
+    color: #121212;
+}
+
 /********** Medium devices only **********/
 @media (min-width: 992px) and (max-width: 1199px) {
     /* Product images */
